--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,5 @@ jobs:
         run: bash <(curl -s https://codecov.io/bash)
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - name: Pylint
+        run: poetry run pylint src
